--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "^5.0.1",
     "redux": "^5.0.0",
     "redux-thunk": "^3.1.0",
+    "socket.io-client": "^4.8.0",
     "thunk": "^0.0.1",
     "web-vitals": "^1.0.1"
   },
